--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
     <ul> 
         <li> Javasrcipt: </li>
         <li> PHP</li>
+        <li> <a href="index.html">home</a></li>
+<li> <a href="index.html2">about></a></li>
     </ul>
     </ul>
+
+
  </html>
